Add tpm and vim-tmux-navigator

--- a/tmux_macos/.tmux.conf
+++ b/tmux_macos/.tmux.conf
@@ -3,7 +3,8 @@ bind r source-file ~/.tmux.conf
 
 set -g default-terminal "screen-256color"
 
-# Leader to Control + a
+# Leader to Control + f
+unbind C-b
 set -g prefix C-a
 
 # Activate mouse
@@ -12,10 +13,10 @@ set -g mouse on
 # Vim motions to move around
 set-window-option -g mode-keys vi
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key h resize-pane -L
+bind-key j resize-pane -D
+bind-key k resize-pane -U
+bind-key l resize-pane -R
 
 # Status bar on top
 set-option -g status-position top
@@ -31,4 +32,20 @@ setw -g window-status-current-format '#I:#W*'
 set -g status-right '#(echo #{pane_current_path} | awk -F/ '\''{print $(NF-1) "/" $NF}'\'') | %H:%M %d-%b-%y'
 
 # Keybind to yank in copy mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Keybind for open pane in current path
+bind - split-window -v -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
+
+# Remap clear screen to Ctrl-g
+bind -n C-g send-keys -R \; send-keys 'clear' C-m
+
+# TPM Plugin
+set -g @plugin 'tmux-plugins/tpm'
+# List of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
