windows start at 1 instead of 0

--- a/tmux/macos/.tmux.conf
+++ b/tmux/macos/.tmux.conf
@@ -24,6 +24,10 @@ set-option -g status-position top
 # Left: session name + W →
 set -g status-left '[#S] W → '
 
+# Start windows and panes at 1
+set -g base-index 1
+set -g pane-base-index 1
+
 # Window list
 setw -g window-status-format '#I:#W'
 setw -g window-status-current-format '#I:#W*'
