Added tmux config for linux X11

--- a/tmux/linux/.tmux.conf
+++ b/tmux/linux/.tmux.conf
@@ -21,6 +21,10 @@ bind-key l resize-pane -R
 # Status bar on top
 set-option -g status-position top
 
+# Start windows and panes at 1
+set -g base-index 1
+set -g pane-base-index 1
+
 # Left: session name + W →
 set -g status-left '[#S] W → '
 
